# FUSINTER

./: .gitignore  .gitmodules  apply_on_datasets.ipynb  benchmark_v1.py  benchmark_v1_results.txt  benchmark_v2.py  benchmark_v2_2.py  benchmark_v2_2_results.txt  benchmark_v2_results.txt  benchmark_v3.py  benchmarks.txt  datasets.py  eta_lambda_effects.ipynb  freeze.txt  fusinter_v1.py  fusinter_v3.py  main.py  test_fusinter_v1.py  test_fusinter_v3.py
datasets/: paper_dataset.py
fusinter_v1/: __init__.py  fusinter_v1.py  splitter.py  table_manager.py  test_fusinter_v1.py  test_splitter.py  test_table_manager.py
fusinter_v2/: fusinter_v2.py  merge_value_computer.py  table_manager.py  test_fusinter_v2.py
fusinter_v2_2/: fusinter_v2.py  merge_value_computer.py  test_fusinter_v2.py  test_merge_value_computer.py
fusinter_v2_2_max_heap/: fusinter_v2.py  orderedHeap.py  splitvaluecomputer.py  test_max_heap.py
fusinter_v2_2_new_interface/: fusinter_v2.py  merge_value_computer.py  splitter.py  test_merge_value_computer.py
fusinter_v3/: CMakeLists.txt  main.cpp  pybind11.cpp
fusinter_v3/lib/: MergeValueComputer.h  Splitter.h  TableManager.h  errors.h  fusinter.h  library.h  test_splitter.cpp  tests.cpp  typedefs.h
